koa-sample/deployment/ap-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: koa-sample-ap
spec:
  selector:
    app: koa-sample-ap
  ports:
  - port: 3000
  clusterIP: None
---
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: koa-sample-ap
spec:
  replicas: 2
  selector:
    matchLabels:
      app: koa-sample-ap
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: koa-sample-ap
    spec:
      containers:
      - image: cndjp/koa-sample-ap:0.1
        name: koa-sample-ap
        ports:
        - containerPort: 3000
          name: koa-sample-ap
