koa-sample/deployment/db-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: koa-sample-db
spec:
  ports:
  - port: 3306
  selector:
    app: koa-sample-db
  clusterIP: None
---
apiVersion: apps/v1beta1 # for versions before 1.8.0 use apps/v1beta1
kind: Deployment
metadata:
  name: koa-sample-db
spec:
  selector:
    matchLabels:
      app: koa-sample-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: koa-sample-db
    spec:
      containers:
      - image: cndjp/koa-sample-db:0.1
        name: koa-sample-db
        ports:
        - containerPort: 3306
          name: koa-sample-db
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
