koa-sample/deployment/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: koa-sample-web
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/affinity: "cookie"
    ingress.kubernetes.io/session-cookie-name: "route"
    ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
  - host: "*.k8s"
    http:
      paths:
      - path: /
        backend:
          serviceName: koa-sample-ap
          servicePort: 3000
